apps/streamflow/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamflow
  namespace: media
spec:
  selector:
    matchLabels:
      app: streamflow
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: streamflow
    spec:
      nodeSelector:
        kubernetes.io/arch: "arm64"
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: streamflow
          image: ghcr.io/krinkuto11/streamflow:2.5.6@sha256:fdf4c91b332c49ed5862a534cee75bb3eafa2e45aebd9ca1834697b551d3550d
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              drop:
                - ALL
          resources:
            limits:
              cpu: 300m
              memory: 256Mi
            requests:
              cpu: 150m
              memory: 128Mi
          ports:
            - name: main
              containerPort: 5000
          volumeMounts:
            - mountPath: /app/data
              name: data
            - mountPath: /tmp
              name: tmp
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: streamflow-data
        - name: tmp
          emptyDir: {}
