apps/streamflow/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: streamflow-ingress
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: infra-int-old
spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`streamflow.sobrinho.pt`)
      kind: Rule
      services:
        - name: streamflow
          port: main
  tls:
    secretName: streamflow-cert
